Fix z-index issues, update shadow logic.

--- a/src/Pages/Home/LandingPage/Landing.css
+++ b/src/Pages/Home/LandingPage/Landing.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 
-  height: 90vh;
-  /* background-color: #4b68c03a; */
+  height: 100vh;
 }
 
 .Landing header {
@@ -13,11 +12,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  position: absolute;
-  top: 50vh;
-  transform: translateY(calc(-50%));
-  left: var(--text-2xl);
 }
 
 .Landing .name {
@@ -46,32 +40,17 @@
   z-index: 2;
 }
 
-.Landing .skills {
-  width: 100%;
-  height: 90px;
-  max-width: 1536px;
-
-  text-align: end;
-  font-size: var(--text-base);
-}
-
-.Landing .skills > * {
-  margin-bottom: calc(var(--text-base) / 3);
-}
-
 .Landing .heroCard {
   width: calc((100vw / 12) * 3);
   max-width: 468px;
   max-height: 777px;
   aspect-ratio: 1 / 1.6;
 
-  z-index: 1;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 
   border-radius: 10px;
-  background-color: white;
   background: radial-gradient(
       112.57% 65.06% at 112.17% -1.38%,
       #f04dc2 0%,
@@ -88,40 +67,25 @@
       rgba(77, 181, 240, 0) 100%
     ),
     #ffffff;
-
-  /* box-shadow: 0px 2.4px 1.4px rgba(0, 0, 0, 0.025),
-    0px 5.7px 3.3px rgba(0, 0, 0, 0.036), 0px 10.8px 6.3px rgba(0, 0, 0, 0.045),
-    0px 19.2px 11.2px rgba(0, 0, 0, 0.054),
-    0px 35.9px 20.9px rgba(0, 0, 0, 0.065), 0px 86px 50px rgba(0, 0, 0, 0.09); */
 }
 
-/* .Landing .heroCard::after {
-  position: absolute;
-  transform: translate(calc((100vw / 12) * 0.75), 32px);
-  
-  content: 'F';
-  height: calc((100vh / 12) * 8);
-  width: calc((100vw / 12) * 1.5);
-  background: linear-gradient(
-    90deg,
-    rgba(53, 41, 102, 0.42) 0%,
-    rgba(84, 79, 105, 0.42) 100.18%
-  );
-  filter: blur(25px);
-  border-radius: 10px;
-} */
-.Landing .heroCard::after {
-  content: '';
-  position: absolute;
-  z-index: -10;
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 50%);
-  width: calc(377px * 0.77);
-  height: 0;
-  padding-bottom: 10%;
-  background: radial-gradient(ellipse, #000 70%, transparent 70%);
-  filter: blur(50px);
+.Landing .heroCard:nth-of-type(2) {
+  transform: translateY(calc(-50% + 20%)) scale(0.75);
+  background: rgba(0, 0, 0, 0.35);
+  filter: blur(60px);
+}
+
+.Landing .skills {
+  width: 100%;
+  height: 90px;
+  max-width: 1536px;
+
+  text-align: end;
+  font-size: var(--text-base);
+}
+
+.Landing .skills > * {
+  margin-bottom: calc(var(--text-base) / 3);
 }
 
 .Landing > p {
